--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -18,12 +18,14 @@ jobs:
       - name: Set up cross-compilation
         run: |
           sudo dpkg --add-architecture arm64
+          sed 's/http:\/\/\(.*\).ubuntu.com\/ubuntu\//[arch-=amd64,i386] http:\/\/ports.ubuntu.com\/ubuntu-ports\//g' /etc/apt/sources.list > /etc/apt/sources.list.d/ports.list
+          sed -i 's/http:\/\/\(.*\).ubuntu.com\/ubuntu\//[arch=amd64,i386] http:\/\/\1.archive.ubuntu.com\/ubuntu\//g' /etc/apt/sources.list
           sudo apt update
           sudo apt install -y libpcap-dev libpcap-dev:arm64 gcc-aarch64-linux-gnu libc6-dev-arm64-cross
       - name: Install dependencies
         run: make depend
       - name: Build with Go
-        run: make ci-build
+        run: make release-build
       - name: Publish to GitHub releases
         if: ${{ github.ref == 'refs/heads/main' }}
         uses: marvinpinto/action-automatic-releases@latest
