--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-linux:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout sources
@@ -16,10 +16,7 @@ jobs:
         with:
           go-version: 1.16
       - name: Set up cross-compilation
-        run: |
-          sudo dpkg --add-architecture arm64
-          sudo apt update || true
-          sudo apt install -y libpcap-dev libpcap-dev:arm64 gcc-aarch64-linux-gnu libc6-dev-arm64-cross
+        run: sudo apt install -y libpcap-dev gcc-aarch64-linux-gnu libc6-dev-arm64-cross
       - name: Install dependencies
         run: make depend
       - name: Build with Go
