feat: Apply standard go layout to db migrations

--- a/configs/node_wake.yaml
+++ b/configs/node_wake.yaml
@@ -1,4 +1,4 @@
 production:
   dialect: sqlite3
   datasource: out/tmp/var/lib/liwasc/node_wake.sqlite
-  dir: pkg/migrations/node_wake/
+  dir: db/node_wake/
